# meow-vm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  fix_includes.py  report.txt
benchmarks/: CMakeLists.txt  bench.py  bench_call.py  bench_native.cpp  bench_python.py  create_chunk.h  dispatch_bench.cpp  main.cpp  make_chunk.h  vm_vs_native.cpp
build_pgo/: Makefile  default.profraw  meow.profdata
build_pgo/libs/: Makefile
build_pgo/libs/meow_allocator/: Makefile
build_pgo/libs/meow_expected/: Makefile
build_pgo/libs/meow_flat_map/: Makefile
build_pgo/libs/meow_optional/: Makefile
build_pgo/libs/meow_variant/: Makefile
compiler/src/: main.meow
compiler/src/backend/: compiler.meow
compiler/src/frontend/: parser.meow
compiler/src/middle-end/: scopeAnalyzer.meow
docs/: architecture.md  cg_vs_musttail.md  cg_vs_tailcall.md  op_codes.md
include/bytecode/: chunk.h  disassemble.h  loader.h  op_codes.h
include/common/: cast.h  definitions.h  pch.h
include/core/: meow_object.h  objects.h  value.h
include/core/objects/: function.h  hash_table.h  module.h  oop.h  shape.h  string.h
include/jit/: meow_jit.h
include/memory/: generational_gc.h  mark_sweep_gc.h  memory_manager.h
include/meow/: cast.h  common.h  config.h.in  definitions.h  machine.h  value.h
include/meow/bytecode/: chunk.h  disassemble.h  op_codes.h
include/meow/compiler/: op_codes.h
include/meow/core/: array.h  function.h  hash_table.h  meow_object.h  merged_source_full.txt  module.h  objects.h  oop.h  shape.h  string.h
include/meow/diagnostics/: diagnostic.h  locale.h
include/meow/memory/: garbage_collector.h  gc_visitor.h  memory_manager.h
include/module/: module_manager.h
include/runtime/: call_frame.h  execution_context.h  operator_dispatcher.h  upvalue.h
include/vm/: interpreter.h  machine.h  macros.h  vm_state.h
libs/: CMakeLists.txt
libs/libs/meow_hash_map/: CMakeLists.txt
libs/libs/meow_hash_map/include/: meow_hash_map.h
libs/meow_allocator/: CMakeLists.txt
libs/meow_allocator/include/: meow_allocator.h  meow_arena.h  meow_heap.h
libs/meow_enum/: CMakeLists.txt
libs/meow_enum/include/: meow_enum.h
libs/meow_expected/: CMakeLists.txt
libs/meow_expected/include/: meow_expected.h
libs/meow_flat_map/: CMakeLists.txt
libs/meow_flat_map/include/: meow_flat_map.h
libs/meow_hash_map/include/: meow_hash_map.h
libs/meow_optional/: CMakeLists.txt
libs/meow_optional/include/: meow_optional.h
libs/meow_variant/include/: meow_nanbox_layout.h  meow_variant.h
libs/meow_variant/internal/: fallback.h  nanbox.h  utils.h
libs/meow_zerr/: CMakeLists.txt
libs/meow_zerr/include/: meow_zerr.h
merged/: include.unified.cpp  include_meow_core.unified.cpp  meow_vm_full_context.unified.cpp  meow_vm_full_context.unified.txt  src.unified.cpp  src_core.unified.cpp  src_jit.unified.cpp  src_memory.unified.cpp  src_tools_masm.unified.cpp  src_vm.unified.cpp  src_vm_handlers.unified.cpp  src_vm_handlers.unified.old.cpp  src_vm_stdlib.unified.cpp
scripts/: bootstrap.sh  build_fast.sh  build_masm.sh  build_tests.sh  generate_jit.sh  jit_refactor.sh  merge_code.sh  run.sh  setup_ccache.sh
src/: CMakeLists.txt  main.cpp  pch.h
src/bytecode/: binary_loader.cpp  disassemble.cpp  loader.cpp  loader.h  op_codes.cpp
src/cli/: main.cpp
src/compiler/: disassemble.cpp  disassemble.h  loader.cpp  loader.h
src/core/: objects.cpp  shape.cpp
src/debug/: print.h
src/jit/: CMakeLists.txt  compiler.cpp  compiler.h  jit_compiler.cpp  jit_compiler.h  jit_config.h  meow_jit.h
src/jit/analysis/: bytecode_analysis.cpp
src/jit/runtime/: runtime_stubs.cpp
src/jit/x64/: assembler.cpp  assembler.h  code_generator.cpp  code_generator.h  common.h  compiler.cpp  compiler.h  emitter.cpp  emitter.h
src/memory/: gc_disable_guard.h  generational_gc.cpp  generational_gc.h  mark_sweep_gc.cpp  mark_sweep_gc.h  memory_manager.cpp
src/module/: module_manager.cpp  module_manager.h  module_utils.cpp  module_utils.h
src/runtime/: call_frame.h  exception_handler.h  execution_context.h  operator_dispatcher.cpp  operator_dispatcher.h  upvalue.h
src/tools/masm/: CMakeLists.txt
src/tools/masm/include/meow/masm/: assembler.h  common.h  lexer.h  optimizer.h  utils.h
src/tools/masm/src/: assembler.cpp  lexer.cpp  main.cpp  optimizer.cpp  utils.cpp
src/tools/masm/tests/: test_optimizer.cpp
src/vm/: builtins.cpp  interpreter.cpp  interpreter.h  lifecycle.cpp  machine.cpp  vm_state.h
src/vm/handlers/: data_ops.h  exception_ops.h  flow_ops.h  math_ops.h  memory_ops.h  merged_source_full.txt  module_ops.h  oop_ops.h  utils.h
src/vm/stdlib/: array_lib.cpp  io_lib.cpp  json_lib.cpp  memory_lib.cpp  object_lib.cpp  stdlib.h  string_lib.cpp  system_lib.cpp
tests/: benchmark.py  call_bench.meow  call_bench.meowb  call_bench.meowc  flashlang  flashlang.c  flashvm  flashvm.c  math  math.asm  meowc  meowc.asm  output  output.asm  prime.cpp  print.meow  sohoc  sohoc.asm  tco_test.meow  tco_test.meowb  tco_test.meowc  test  test.asm  test.cpp  test.meow  test.meowb  test.meowc  test_function.meowb  test_simple.meow  test_simple.meowb  test_upvalue.meowb
tests/build-stage37/: bytecodeStringifier.meowb  cacheManager.meowb  codeGenerator.meowb  compiler.meowb  compilerState.meowb  diagnostic.meowb  emitter.meowb  expression.meowb  lexer.meowb  literal.meowb  main.meowb  opCodes.meowb  parser.meowb  registerAllocator.meowb  scopeAnalyzer.meowb  statement.meowb  symbolTable.meowb  token.meowb  tokenTables.meowb  visitor.meowb
tests/build-stage40/: ast.meowb  bytecodeStringifier.meowb  cacheManager.meowb  checkType.meowb  codeGenerator.meowb  compiler.meowb  compilerState.meowb  constantPool.meowb  diagnostic.meowb  emitter.meowb  expression.meowb  lexer.meowb  literal.meowb  main.meowb  makeCacheFile.meowb  parser.meowb  pathUtils.meowb  precedence.meowb  preprocessor.meowb  scopeAnalyzer.meowb  statement.meowb  tokenTables.meowb  visitor.meowb
tools/: masm.cpp
tools/masm/: CMakeLists.txt
tools/masm/include/: assembler.h  common.h
tools/masm/src/: assembler.cpp
(+9 files in other folders)
